[package]
name = "nlp"
repository = "https://github.com/Freyskeyd/nlp"
description = "NLP library"
version = "0.1.1"
authors = ["Freyskeyd <contact@freyskeyd.fr>"]
license = "MIT/Apache-2.0"
exclude = [
    "circle.yml",
    "words2.txt"
]

[dependencies]
itertools = "0.4.3"
clippy = { version = "0.0.35", optional = true }

